--- a/css/croppy.scss
+++ b/css/croppy.scss
@@ -1,6 +1,8 @@
 $width: 850px;
 $c-height: 515px;
 $height: 565px;
+$boxsize: 12px;
+$linewidth: 2px;
 .cover {
     position: fixed;
     top: 0;
@@ -10,7 +12,29 @@ $height: 565px;
     border: 2px solid #000;
     .ruler {
         position: absolute;
-        border: 2px dotted #39f;
+        overflow: hidden;
+        top: 100px;
+        left: 200px;
+        cursor: move;
+        // width: $boxsize * 2 + $linewidth*3;
+        // height: $boxsize * 2 + $linewidth*3;
+        z-index: 3;
+    }
+    .ruler-block {
+        // width: $boxsize;
+        // height: $boxsize;
+        float: left;
+        border: 1.5px dotted #39f;
+        &:nth-child(2) {
+            border-left-width: 0;
+        }
+        &:nth-child(3),
+        &:nth-child(4) {
+            border-top-width: 0;
+        }
+        &:nth-child(4) {
+            border-left-width: 0;
+        }
     }
     .container {
         width: $width;
