--- a/css/croppy.css
+++ b/css/croppy.css
@@ -40,7 +40,8 @@
   .cover .layer-content {
     width: 850px;
     height: 515px;
-    position: relative; }
+    position: relative;
+    overflow: hidden; }
   .cover .toolbar {
     overflow: hidden;
     margin: 10px auto;
