--- a/css/croppy.scss
+++ b/css/croppy.scss
@@ -17,7 +17,7 @@ $linewidth: 2px;
         overflow: hidden;
         top: 250px;
         left: 400px;
-        cursor: move;
+        cursor: pointer;
         z-index: 3;
         display: none;
     }
